# backend-PI

./: .pdm-python  pyproject.toml
alunos/: admin.py  models.py  serializers.py
alunos/migrations/: 0001_initial.py  0002_rename_sigle_estado_sigla_cidade.py  0003_pessoa.py
config/: settings.py  urls.py
