[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lucas-EstudanteIFC", email = "alunolucasmartins62@gmail.com"},
]
dependencies = [
    "django>=4.2.18",
    "djangorestframework>=3.15.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
